[gd_scene load_steps=26 format=2]

[ext_resource path="res://LEETeaster.gd" type="Script" id=1]
[ext_resource path="res://texture/knight quest/LEET back.png" type="Texture" id=2]
[ext_resource path="res://enemisleet.gd" type="Script" id=3]
[ext_resource path="res://player.tscn" type="PackedScene" id=4]
[ext_resource path="res://texture/knight quest/LEET.wav" type="AudioStream" id=5]
[ext_resource path="res://texture/static/hit!.wav" type="AudioStream" id=6]
[ext_resource path="res://texture/static/enemykill.wav" type="AudioStream" id=7]
[ext_resource path="res://texture/static/gameover.wav" type="AudioStream" id=8]
[ext_resource path="res://restartmenu.gd" type="Script" id=9]
[ext_resource path="res://texture/knight quest/replay1.png" type="Texture" id=10]
[ext_resource path="res://Button.gd" type="Script" id=11]
[ext_resource path="res://texture/static/quit.png" type="Texture" id=12]
[ext_resource path="res://texture/static/Pixeled.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://texture/static/home.png" type="Texture" id=14]
[ext_resource path="res://texture/static/unpause.png" type="Texture" id=15]
[ext_resource path="res://texture/knight quest/LEETend.png" type="Texture" id=16]
[ext_resource path="res://texture/static/blackback.png" type="Texture" id=17]
[ext_resource path="res://text+back.tres" type="DynamicFont" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 537.666, 31.8961 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.2174, 329.782 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=7]
resource_name = "leetend"
length = 18.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.05, 4.1, 4.15, 4.2, 4.25, 4.3, 4.35, 4.4, 4.45, 4.5, 4.55, 4.6, 4.65, 4.7, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.05, 9.1, 9.15, 9.2, 9.25, 9.3, 9.35, 9.4, 9.45, 9.5, 9.55, 9.6, 11, 11.5, 12, 12.5, 13, 13.5, 14, 14.05, 14.1, 14.15, 14.2, 14.25, 14.3, 14.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 0, 1, 0, 1, 0, 1, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 0, 1, 0, 1, 0, 1, 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="mur" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="mur"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D"]
position = Vector2( 512.186, -2.39899 )
shape = SubResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="mur"]
position = Vector2( 1027.89, 183.391 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D4"]
position = Vector2( -4.23779, 116.969 )
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="mur"]
position = Vector2( 13.6361, 600.849 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D2"]
position = Vector2( 488.937, -5.79388 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="mur"]
position = Vector2( -1.43201, 183.391 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D3"]
position = Vector2( -3.51129, 116.048 )
shape = SubResource( 2 )

[node name="background" type="Sprite" parent="mur"]
position = Vector2( 506.934, 299.396 )
scale = Vector2( 0.410866, 0.404867 )
z_index = -3
texture = ExtResource( 2 )

[node name="enemis" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="enemis"]
wait_time = 0.3
autostart = true

[node name="playernode" type="Node" parent="."]

[node name="player" parent="playernode" instance=ExtResource( 4 )]
position = Vector2( 513.124, 304.811 )
z_index = 1
collision/safe_margin = 0.001

[node name="sond" type="Node" parent="."]

[node name="musique" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 5 )

[node name="hit" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 6 )

[node name="enemykill" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 7 )
volume_db = -16.64

[node name="gameover" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 8 )

[node name="restartmenu" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Button" type="Button" parent="restartmenu"]
visible = false
margin_left = 421.55
margin_top = 91.5364
margin_right = 881.55
margin_bottom = 513.536
rect_scale = Vector2( 0.35, 0.35 )
icon = ExtResource( 10 )
flat = true
script = ExtResource( 11 )

[node name="quit" type="Button" parent="restartmenu"]
visible = false
margin_left = 527.807
margin_top = 304.418
margin_right = 731.807
margin_bottom = 502.418
rect_scale = Vector2( 0.35, 0.35 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
icon = ExtResource( 12 )
flat = true

[node name="quitb" type="Button" parent="restartmenu"]
visible = false
margin_left = 461.185
margin_top = 302.567
margin_right = 665.185
margin_bottom = 500.567
rect_scale = Vector2( 0.35, 0.35 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
icon = ExtResource( 12 )
flat = true

[node name="recommencer" type="Label" parent="restartmenu"]
visible = false
margin_left = 358.0
margin_top = 220.0
margin_right = 643.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 3 )
text = "RECOMMENCER"

[node name="quit2" type="Label" parent="restartmenu"]
visible = false
margin_left = 477.775
margin_top = 361.176
margin_right = 652.775
margin_bottom = 431.176
custom_fonts/font = SubResource( 4 )
text = "QUITTER"

[node name="quitb2" type="Label" parent="restartmenu"]
visible = false
margin_left = 418.555
margin_top = 357.475
margin_right = 593.555
margin_bottom = 427.475
custom_fonts/font = SubResource( 4 )
text = "QUITTER"

[node name="home2" type="Label" parent="restartmenu"]
visible = false
margin_left = 359.37
margin_top = 362.79
margin_right = 464.37
margin_bottom = 432.79
custom_fonts/font = SubResource( 5 )
text = "MENU"

[node name="home" type="Button" parent="restartmenu"]
visible = false
margin_left = 365.612
margin_top = 285.032
margin_right = 601.612
margin_bottom = 547.032
rect_scale = Vector2( 0.35, 0.35 )
icon = ExtResource( 14 )
flat = true

[node name="unpause" type="Button" parent="restartmenu"]
visible = false
margin_left = 460.003
margin_top = 89.1905
margin_right = 632.003
margin_bottom = 319.191
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 15 )
flat = true

[node name="unpause2" type="Label" parent="restartmenu"]
visible = false
margin_left = 385.566
margin_top = 181.166
margin_right = 610.566
margin_bottom = 251.166
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "REPRENDRE"

[node name="cinema" type="Node" parent="."]

[node name="LEETend" type="Sprite" parent="cinema"]
visible = false
position = Vector2( 512.958, 304.544 )
scale = Vector2( 0.407681, 0.411805 )
z_index = 1
texture = ExtResource( 16 )
vframes = 8
hframes = 5
frame = 39

[node name="AnimationPlayer" type="AnimationPlayer" parent="cinema/LEETend"]
anims/leetend = SubResource( 7 )

[node name="blacktext" type="Sprite" parent="cinema"]
visible = false
position = Vector2( 515.251, 301.943 )
scale = Vector2( 33.2032, 19.8714 )
z_index = 1
texture = ExtResource( 17 )

[node name="text" type="Label" parent="cinema/blacktext"]
margin_left = -15.0
margin_top = -15.0
margin_right = 291.0
margin_bottom = 281.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 18 )
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indication" type="Label" parent="cinema/blacktext"]
margin_left = -15.0
margin_top = 10.0
margin_right = 283.0
margin_bottom = 56.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 18 )
text = "TEST"
[connection signal="pause" from="." to="playernode/player" method="_on_main_pause"]
[connection signal="pause" from="." to="enemis" method="_on_main_pause"]
[connection signal="pause" from="." to="playernode" method="_on_main_pause"]
[connection signal="unpause" from="." to="playernode/player" method="_on_main_unpause"]
[connection signal="unpause" from="." to="enemis" method="_on_main_unpause"]
[connection signal="unpause" from="." to="playernode" method="_on_main_unpause"]
[connection signal="timeout" from="enemis/Timer" to="enemis" method="_on_Timer_timeout"]
[connection signal="finished" from="sond/musique" to="." method="_on_musique_finished"]
[connection signal="mouse_entered" from="restartmenu/Button" to="restartmenu" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="restartmenu/Button" to="restartmenu" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="restartmenu/Button" to="playernode/player" method="_on_Button_pressed"]
[connection signal="pressed" from="restartmenu/Button" to="enemis" method="_on_Button_pressed"]
[connection signal="pressed" from="restartmenu/Button" to="playernode" method="_on_Button_pressed"]
[connection signal="pressed" from="restartmenu/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="restartmenu/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="restartmenu/quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="restartmenu/quit" to="restartmenu" method="_on_quit_pressed"]
[connection signal="mouse_entered" from="restartmenu/quitb" to="restartmenu" method="_on_quitb_mouse_entered"]
[connection signal="mouse_exited" from="restartmenu/quitb" to="restartmenu" method="_on_quitb_mouse_exited"]
[connection signal="pressed" from="restartmenu/quitb" to="." method="_on_quitb_pressed"]
[connection signal="mouse_entered" from="restartmenu/home" to="restartmenu" method="_on_home_mouse_entered"]
[connection signal="mouse_exited" from="restartmenu/home" to="restartmenu" method="_on_home_mouse_exited"]
[connection signal="pressed" from="restartmenu/home" to="restartmenu" method="_on_home_pressed"]
[connection signal="mouse_entered" from="restartmenu/unpause" to="restartmenu" method="_on_unpause_mouse_entered"]
[connection signal="mouse_exited" from="restartmenu/unpause" to="restartmenu" method="_on_unpause_mouse_exited"]
[connection signal="pressed" from="restartmenu/unpause" to="." method="_on_unpause_pressed"]
